--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,49 @@
  * #CUSTOM PROPERTY
 \*-----------------------------------*/
 
+
+.popup-box {
+  display: none; /* Initially hidden */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background: rgb(247, 247, 247); /* Green background */
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center; /* Centers text and button inside the popup */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.popup-content button {
+  margin: 10px auto 0; /* Center the button horizontally */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff; /* White button */
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  display: block; /* Ensure the button takes up its own row */
+}
+
+.popup-content button:hover {
+  background-color: #ddd; /* Light gray on hover */
+}
+
+
+
+
 :root {
 
   /**
